'hasTwoOrMoreShards' cluster parameter can be incorrect if removeShard is interrupted even if it is retried after

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • Cluster Scalability 2024-5-27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The last step of removeShard in 8.1+ is updating the "hasTwoOrMoreShards" cluster parameter if the number of shards goes from 2 back to 1. If there is an interrupt before that step, the "hasTwoOrMoreShards" cluster parameter would be left as true even if there is a retry because the retry would fail with ShardNotFound here and never get to the cluster parameter update step. 

            Assignee:
            Cheahuychou Mao
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: