SERVER-90334 Make sure that 'hasTwoOrMoreShards' cluster parameter is updated correctly when removeShard is retried after it is interrupted (#22022)

GitOrigin-RevId: 7dfe0e9e28c65e3dc83b2d483756ccfffcf1ee39