src/mongo/db/s/config/sharding_catalog_manager.h
@@ -569,11 +569,12 @@ public:
     Lock::SharedLock enterStableTopologyRegion(OperationContext* opCtx);
 
     /**
-     * Updates the "hasTwoOrMoreShard" cluster cardinality parameter based on the given number of
-     * shards. Cannot be called while holding the _kShardMembershipLock in exclusive mode since
-     * setting cluster parameters requires taking this lock in shared mode.
+     * Updates the "hasTwoOrMoreShard" cluster cardinality parameter based on the number of shards
+     * in the shard registry after reloading it. Cannot be called while holding the
+     * _kShardMembershipLock in exclusive mode since setting cluster parameters requires taking this
+     * lock in shared mode.
      */
-    Status updateClusterCardinalityParameter(OperationContext* opCtx, int numShards);
+    Status updateClusterCardinalityParameterIfNeeded(OperationContext* opCtx);
 
     //
     // Cluster Upgrade Operations
@@ -907,6 +908,17 @@ private:
                                                            const ChunkType& origChunk,
                                                            const ChunkVersion& collPlacementVersion,
                                                            const std::vector<BSONObj>& splitPoints);
+
+    /**
+     * Updates the "hasTwoOrMoreShard" cluster cardinality parameter based on the given number of
+     * shards. Can only be called while holding the _kClusterCardinalityParameterLock in exclusive
+     * mode and not holding the _kShardMembershipLock in exclusive mode since setting cluster
+     * parameters requires taking the latter in shared mode.
+     */
+    Status _updateClusterCardinalityParameter(
+        const Lock::ExclusiveLock& clusterCardinalityParameterLock,
+        OperationContext* opCtx,
+        int numShards);
 
     /**
      * Updates the "hasTwoOrMoreShard" cluster cardinality parameter after an add or remove shard
